[gd_scene load_steps=23 format=3 uid="uid://br8dswv6ug16q"]

[ext_resource type="Texture2D" uid="uid://2wvotbf5sand" path="res://sprites.png" id="1_03lg1"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_gejag"]
[ext_resource type="PackedScene" uid="uid://dvsr0owx3rnh7" path="res://scenes/conveyer.tscn" id="2_tssqo"]
[ext_resource type="PackedScene" uid="uid://c1enkdsrxm1q5" path="res://scenes/splitter.tscn" id="3_4yost"]
[ext_resource type="PackedScene" uid="uid://cvd6dr6c3ny7" path="res://scenes/constructor.tscn" id="4_m5fe8"]
[ext_resource type="PackedScene" uid="uid://cwksc4ydug47u" path="res://scenes/deconstructor.tscn" id="5_v7qm3"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="6_ihc8j"]
[ext_resource type="Shader" path="res://background.gdshader" id="7_pgx5q"]
[ext_resource type="FontFile" uid="uid://de0tcxurw6m1g" path="res://monogram.ttf" id="10_ajyt0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aok1b"]
shader = ExtResource("7_pgx5q")

[sub_resource type="Gradient" id="Gradient_osxht"]
colors = PackedColorArray(0, 0, 0, 0.596078, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_enlcp"]
gradient = SubResource("Gradient_osxht")
width = 20
height = 128
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="LabelSettings" id="LabelSettings_enl0o"]
font = ExtResource("10_ajyt0")

[sub_resource type="LabelSettings" id="LabelSettings_0381h"]
font = ExtResource("10_ajyt0")

[sub_resource type="Animation" id="Animation_36yyt"]
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_fxq6c"]
resource_name = "hide"
length = 0.5
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_luwcm"]
resource_name = "show"
length = 0.5
step = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-160, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ch30j"]
_data = {
"RESET": SubResource("Animation_36yyt"),
"hide": SubResource("Animation_fxq6c"),
"show": SubResource("Animation_luwcm")
}

[sub_resource type="Animation" id="Animation_oh1ek"]
resource_name = "RESET"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-160, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4)
}

[sub_resource type="Animation" id="Animation_k3n4s"]
resource_name = "hide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_24c80"]
resource_name = "show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-160, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jddf2"]
_data = {
"RESET": SubResource("Animation_oh1ek"),
"hide": SubResource("Animation_k3n4s"),
"show": SubResource("Animation_24c80")
}

[node name="World" type="Node2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_gejag")
conveyor_scene = ExtResource("2_tssqo")
splitter_scene = ExtResource("3_4yost")
constructor_scene = ExtResource("4_m5fe8")
deconstructor_scene = ExtResource("5_v7qm3")

[node name="Background" type="ColorRect" parent="."]
z_index = -100
material = SubResource("ShaderMaterial_aok1b")
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0

[node name="Border" type="NinePatchRect" parent="."]
offset_left = -70.0
offset_top = -85.0
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("1_03lg1")
region_rect = Rect2(92, 28, 24, 24)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Arena" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Arena"]
z_index = -50
offset_left = -64.0
offset_top = -79.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.0235294, 0.0235294, 0.0313726, 1)

[node name="ColorRect2" type="ColorRect" parent="Arena"]
z_index = -50
offset_left = -64.0
offset_top = -79.0
offset_right = 64.0
offset_bottom = -63.0
color = Color(0.0784314, 0.0627451, 0.0745098, 1)

[node name="ColorRect3" type="TextureRect" parent="Arena"]
z_index = -50
offset_left = -64.0
offset_top = -63.0
offset_right = 64.0
offset_bottom = -54.0
texture = SubResource("GradientTexture2D_enlcp")
expand_mode = 1

[node name="ColorRect4" type="TextureRect" parent="Arena"]
z_index = -50
offset_left = -64.0
offset_top = -63.0
offset_right = 64.0
offset_bottom = -60.0
scale = Vector2(1, -1)
texture = SubResource("GradientTexture2D_enlcp")
expand_mode = 1

[node name="TileSelection" type="VBoxContainer" parent="."]
offset_left = 71.0
offset_top = -89.0
offset_right = 102.0
offset_bottom = 82.0

[node name="ConveyorButton" type="Button" parent="TileSelection"]
layout_mode = 2
text = "C"

[node name="DeleteButton" type="Button" parent="TileSelection"]
layout_mode = 2
text = "X"

[node name="SplitterButton" type="Button" parent="TileSelection"]
layout_mode = 2
text = "S"

[node name="ConstructorButton" type="Button" parent="TileSelection"]
layout_mode = 2
text = "CR"

[node name="DeconstructorButton" type="Button" parent="TileSelection"]
layout_mode = 2
text = "DR"

[node name="QuotaDisplay" type="Node2D" parent="."]
position = Vector2(-105, -85)

[node name="Label" type="Label" parent="QuotaDisplay"]
offset_left = -4.0
offset_top = 2.0
offset_right = 32.0
offset_bottom = 15.0
text = "Quota:"
label_settings = SubResource("LabelSettings_enl0o")
horizontal_alignment = 1

[node name="QuotaItems" type="VBoxContainer" parent="QuotaDisplay"]
offset_left = -6.0
offset_top = 17.0
offset_right = 34.0
offset_bottom = 152.0

[node name="Camera2D" type="Camera2D" parent="."]
process_priority = 1
process_physics_priority = 1
position = Vector2(0, -8)
script = ExtResource("6_ihc8j")

[node name="MenuViewArea" type="Control" parent="."]
z_index = 10
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -64.0
offset_top = -79.0
offset_right = 64.0
offset_bottom = 64.0

[node name="Main Menu" type="Control" parent="MenuViewArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuViewArea/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0313726, 1)

[node name="Label" type="Label" parent="MenuViewArea/Main Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 24.0
offset_right = 30.0
offset_bottom = 37.0
grow_horizontal = 2
text = "My Game"
label_settings = SubResource("LabelSettings_0381h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="MenuViewArea/Main Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuViewArea/Main Menu"]
libraries = {
"": SubResource("AnimationLibrary_ch30j")
}

[node name="Results Menu" type="Control" parent="MenuViewArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuViewArea/Results Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0235294, 0.0313726, 1)

[node name="Label" type="Label" parent="MenuViewArea/Results Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 24.0
offset_right = 30.0
offset_bottom = 37.0
grow_horizontal = 2
text = "Results"
label_settings = SubResource("LabelSettings_0381h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="MenuViewArea/Results Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 39.0
offset_right = 30.0
offset_bottom = 52.0
grow_horizontal = 2
text = "123"
label_settings = SubResource("LabelSettings_0381h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RetryButton" type="Button" parent="MenuViewArea/Results Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -15.5
offset_right = 20.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Retry"

[node name="NextButton" type="Button" parent="MenuViewArea/Results Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 18.5
offset_right = 20.0
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuViewArea/Results Menu"]
libraries = {
"": SubResource("AnimationLibrary_jddf2")
}

[connection signal="pressed" from="TileSelection/ConveyorButton" to="." method="select_conveyor"]
[connection signal="pressed" from="TileSelection/DeleteButton" to="." method="select_delete"]
[connection signal="pressed" from="TileSelection/SplitterButton" to="." method="select_splitter"]
[connection signal="pressed" from="TileSelection/ConstructorButton" to="." method="select_constructor"]
[connection signal="pressed" from="TileSelection/DeconstructorButton" to="." method="select_deconstructor"]
[connection signal="pressed" from="MenuViewArea/Main Menu/PlayButton" to="." method="start_game"]
[connection signal="pressed" from="MenuViewArea/Results Menu/RetryButton" to="." method="restart"]
[connection signal="pressed" from="MenuViewArea/Results Menu/NextButton" to="." method="next"]
